# generate-ninja

./: .appveyor.yml  .gitattributes  .gitignore  .gn  .travis.yml  BUILD.gn  Makefile  README  README.md
.travis/: platform.sh  setenv.sh  setup.sh
base/: BUILD.gn  cfi_flags.h  command_line.cc  memcpy_linux.cc
base/allocator/: allocator_shim_default_dispatch_to_tcmalloc.cc
base/debug/: activity_tracker.cc
base/numerics/: checked_math_impl.h  clamped_math_impl.h
base/strings/: stringprintf.cc
docs/: reference.md
tools/gn/: BUILD.gn  action_target_generator.cc  action_target_generator.h  action_values.h  analyzer.cc  analyzer_unittest.cc  args.cc  args.h  args_unittest.cc  build_settings.cc  build_settings.h  builder.cc  builder.h  builder_unittest.cc  command_analyze.cc  command_args.cc  command_check.cc  command_clean.cc  command_desc.cc  command_format.cc  command_format_unittest.cc  command_gen.cc  command_help.cc  command_ls.cc  command_meta.cc  command_path.cc  command_refs.cc  commands.cc  compile_commands_writer.cc  compile_commands_writer.h  compile_commands_writer_unittest.cc  config_values.cc  config_values.h  config_values_extractors.cc  config_values_extractors.h  config_values_extractors_unittest.cc  config_values_generator.cc  config_values_generator.h  deps_iterator.cc  deps_iterator.h  (+95 more)
tools/gn/bootstrap/: bootstrap.py  build_mac.ninja.template  build_vs.ninja.template
tools/gn/docs/: cookbook.md  reference.md
tools/gn/misc/: help_as_html.py
tools/gn/misc/emacs/: gn-mode.el
tools/gn/misc/tm/: GN.tmLanguage
tools/gn/misc/vim/: gn-format.py
tools/gn/misc/vim/syntax/: gn.vim
util/test/: test.h
